fix spacing

--- a/style.css
+++ b/style.css
@@ -570,15 +570,15 @@ h2, main > p, .regular-text > p, .example, .footer
     display: inline-block;
 }
 
+.example .nobreak:not(:first-child)
+{
+    margin-top: 20px;
+}
 @media print
 {
     .nobreak
     {
         break-inside: avoid;
-    }
-    .example .nobreak:not(:first-child)
-    {
-        margin-top: 20px;
     }
 }
 
@@ -593,7 +593,7 @@ h2, main > p, .regular-text > p, .example, .footer
     padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     margin-top: 100px;
     text-align: center;
 }
